force-app/main/default/objects/CustomLog__c/fields/Parameters__c.field-meta.xml
<CustomField>
    <fullName>Parameters__c</fullName>
    <description>any additional data/parameters that would be helpful to have</description>
    <inlineHelpText>any additional data/parameters that would be helpful to have (e.g. failing record id)</inlineHelpText>
    <label>Parameters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>