force-app/main/default/objects/CustomLog__c/fields/Save__c.field-meta.xml
<CustomField>
    <fullName>Save__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this record will not be deleted in CustomLogDeletionJob scheduled batch job</description>
    <inlineHelpText>When checked, this record will not be deleted in CustomLogDeletionJob scheduled batch job</inlineHelpText>
    <label>Save</label>
    <type>Checkbox</type>
</CustomField>